# AI-Agent-x402-enabled-lending-protocol

./: .gitignore  README.md
ai-agent/: agent.py  queue.json  requirements.txt  trigger.py  worker.py
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: server.js  server.js.map  server.ts
credora-sdk/: package-lock.json  package.json  tsconfig.json
credora-sdk-python/: README.md  pyproject.toml
credora-sdk-python/credora_sdk/: __init__.py  auto_repay_watcher.py  client.py  loans.py  payments.py  utils.py
credora-sdk-python/credora_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
credora-sdk/src/: CredoraClient.ts
credora-sdk/src/loans/: LoanClient.ts
credora-sdk/src/payments/: PaymentHandler.ts
smart-contracts/: foundry.toml
smart-contracts/broadcast/DeployLP.s.sol/84532/: run-1763972377059.json  run-1763972454181.json  run-1763972721809.json  run-1763989064764.json  run-1763989547568.json  run-1763989735665.json
smart-contracts/script/: DeployLP.s.sol  HelperConfig.s.sol
smart-contracts/src/: CreditManager.sol  LendingPool.sol
smart-contracts/test/units/: CMTest.t.sol  LPTest.t.sol
